# pardon-simulator

./: .env.secrets.example  .gitignore  DEPLOYMENT-SUMMARY-2025-11-27.md  DEPLOYMENT_PROFESSIONAL.md  DEPLOYMENT_SETUP_SUMMARY.md  PAYMENT_SERVICE_TYPE_FIX.md  PRODUCTION-STABILITY-ARCHITECTURE.md  QUICK_START_PROFESSIONAL.md  README.md  ROOT_CAUSE_ANALYSIS.md  STABILITY-DEPLOYMENT-CHECKLIST.md  agent_wallets.example.json  complete-restart.sh  docker-compose.yml  rebuild-agent-venvs.sh  registry.toml  reset-database.sh  run-full-test-suite.sh  start-agents-for-testing.sh  start-dev.sh  start-prisma-studio.sh  start-server.sh  start-studio.sh  start-website.sh  test-bad-tools.json  wait-for-agents.sh
.ebextensions/: 01-environment.config  02-s3-access.config  03-docker-compose.config  04-monitoring.config  05-ecr-access.config
.elasticbeanstalk/: config.yml
agents/: .deployment-log  .dockerignore  .env.example  CHANGELOG.md  Dockerfile.agent  Dockerfile.agent.minimal  README_AGENT_SETUP.md  base_agent.py  executor_config.py  fetch-and-start.sh  operational-private.txt.example  personality-public.txt.example  premium_services.example.json  prompt_cache.py  worker_pool.py  x402_cdp_client.py  x402_payment_payload.py  x402_payment_tools.py  x402_solana_adapter.py  x402_solana_payload.py
agents/trump-barron/: coral-agent.toml  main.py  pyproject.toml  run_agent.sh  tool-descriptions.txt.example
aws/: setup-iam-roles.sh
coral-server/: Dockerfile  build.gradle.kts  (+1 more)
pardon-prizes/programs/pardon-prizes/: Cargo.toml
pardon-prizes/programs/pardon-prizes/src/: lib.rs
(+332 files in other folders)
