[package]
name = "pardon-prizes"
version = "0.1.0"
description = "Pardon Prize Distribution Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pardon_prizes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

